--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: soccerapp
+name: live_soccer
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
